--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -16,5 +17,8 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "openai": "^6.9.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.11"
   }
 }
